--- a/pages-index/clinic/expert-schedule/expert-schedule.wxml
+++ b/pages-index/clinic/expert-schedule/expert-schedule.wxml
@@ -78,9 +78,8 @@
               <text class="font-12 color-2">￥{{item.price}}</text>
               </view>
           </view>
-          <view class="schedule-right" bindtap="methodNeedLogin" data-method="chooseSchedule"  data-schedule="{{item.id}}">
-          余{{item.num}}              
-          </view>
+         <view wx:if="{{item.num>0}}" class="schedule-right" bindtap="methodNeedLogin" data-method="chooseSchedule" data-schedule="{{item.id}}">余{{item.num}}</view>
+          <view wx:else class="schedule-right no-num" >已满</view>
         </view>
       
       </scroll-view>
