--- a/pages/center/index/index.wxml
+++ b/pages/center/index/index.wxml
@@ -20,7 +20,7 @@
       </li>
       <li bindtap='methodNeedLogin' data-method="showPage" data-url='/pages/record/appointment-record/appointment-record'>
         <image src="/style/svg/center/center-2.png"></image>
-        <text class='txt'>预约挂号记录</text>
+        <text class='txt'>预约记录</text>
       </li>
       <li bindtap='methodNeedLogin' data-method="showPage" data-url='/pages/center/message/message?type=USER_NOTIFICATION'>
         <image src="/style/svg/center/center-3.png">
