--- a/pages/record/appointment-record-detail/appointment-record-detail.wxml
+++ b/pages/record/appointment-record-detail/appointment-record-detail.wxml
@@ -31,7 +31,7 @@
     <view class='form-fee-item am-flex-item'>
       <view class='form-fee-label form-fee-label'>就诊日期</view>
       <view class='am-flex-after'>
-        <text>{{data.regDate}}</text>
+        <text>{{data.regDateStr}}</text>
         <text wx:if="{{data.regTime=='MORNING'}}">上午</text>
         <text wx:elif="{{data.regTime=='AFTERNOON'}}">下午</text>
         <text wx:else>晚上</text>
