更新持卡人之后就诊卡不显示bug修改

--- a/pages-index/clinic/clinic-info/clinic-info.wxml
+++ b/pages-index/clinic/clinic-info/clinic-info.wxml
@@ -65,9 +65,8 @@
     <view class='form-fee-item font-weight'>
       <view class='form-fee-label'>就诊日期</view>
       <view class='form-fee-control'>
-        <text>{{schedule.scheduleDate}} </text>
-        <text wx:if="{{schedule.time=='MORNING'}}">上午</text>
-        <text wx:elif="{{schedule.time=='AFTERNOON'}}">下午</text>
+        <text>{{schedule.scheduleDateStr}} </text>
+        <text>{{schedules[schedule.time]}}</text>
         <!-- <text wx:else>晚上</text> -->
       </view>
     </view>
