--- a/pages-index/clinic/dept-schedule/dept-schedule.wxml
+++ b/pages-index/clinic/dept-schedule/dept-schedule.wxml
@@ -63,7 +63,7 @@
           <view class="schedule-left">
             <view class="font-16">
               <text space="true">{{item.scheduleDateStr}} </text>
-              <text space="true">星期{{dayOfWeek[item.dayOfWeek+1]}} </text>
+              <text space="true">星期{{dayOfWeek[item.dayOfWeek]}} </text>
               <text>{{schedules[item.time]}}</text>
             </view>
             <view>
