--- a/pages/customer/index/index.wxml
+++ b/pages/customer/index/index.wxml
@@ -10,7 +10,7 @@
 
         <view class="other-side clearfix">
           <view class="tx">
-            <image src="/style/image/t-face.svg"></image>
+            <image src="/style/image/zizhu/guahao.png"></image>
           </view>
           <view class="txt">
             <view class="ul clearfix">
@@ -25,7 +25,7 @@
           <block wx:if="{{item.type==0}}">
             <view class="other-side clearfix">
               <view class="tx">
-                <image src="/style/image/t-face.svg"></image>
+                <image src="/style/image/zizhu/guahao.png"></image>
               </view>
               <view class="txt">
                 <view class="ul clearfix">
@@ -49,7 +49,7 @@
               </view>
               <view class="txt">
                 {{item.question}}
-                <image class="arrow" src="/style/svg/myself-arrow.svg" width="12" height="2"></image>
+                <view class="arrow" width="12" height="2"></view>
               </view>
             </view>
           </block>
