在线客服不能滚动到底部bug修改

--- a/components/member-card/member-card.wxss
+++ b/components/member-card/member-card.wxss
@@ -12,7 +12,7 @@
   height: 100rpx;
   line-height: 100rpx;
   text-align: center;
-  background: #7b99f3;
+  background: #B79153;
   color: #fff;
   border-radius: 100rpx;
   font-size: 34rpx;
